Writing your first Django app, part 6

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,4 +1,9 @@
-{%  if  latest_question_list  %} 
+{% load staticfiles %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
+
+
+{%  if  latest_question_list  %}
     <ul> 
     {%  for  question  in  latest_question_list  %}
 
